<resources>
	<string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
	<string name="app_name">CheapList</string>
	<string name="sign_out">Sign Out</string>
	<string name="category">Category</string>
	<string name="no_data_available">No data available</string>
	<string name="undo">Undo</string>
	<string name="added_to_shopping_list">Added to shopping list</string>
	<string name="removed_from_shopping_list">Removed from shopping list</string>
	<string name="widget_nothing_to_show">Nothing to show</string>
	<string name="nutrition_information">Nutrition information</string>
	<string name="manufacturer_information">Manufacturer information</string>
	<string name="energy">Energy</string>
	<string name="fat">Fat</string>
	<string name="saturatedFat">Saturated fat</string>
	<string name="carbs">Carbs</string>
	<string name="sugar">Sugar</string>
	<string name="protein">Protein</string>
	<string name="salt">Salt</string>
	<string name="shopping_list_menu_item">Shopping list</string>
	<string name="compare_menu_item">Compare</string>
	<string name="product_image">Product image</string>
	<string name="signed_in">Signed in!</string>
	<string name="sign_in_canceled">Sign in canceled</string>
	<string name="add_remove_from_list_action">Add or remove from shopping list action</string>
	<string name="kcal"> kcal</string>
	<string name="gram"> g</string>
	<string name="filter">Filter</string>
</resources>
