<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	android:id="@+id/drawer_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".ui.MainActivity">

	<android.support.design.widget.CoordinatorLayout
		android:id="@+id/coordinator"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="true">

		<android.support.design.widget.AppBarLayout
			android:id="@+id/app_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

		</android.support.design.widget.AppBarLayout>

		<FrameLayout
			android:id="@+id/mainActivityFragmentContainer"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_behavior="@string/appbar_scrolling_view_behavior" />

	</android.support.design.widget.CoordinatorLayout>

	<android.support.design.widget.NavigationView
		android:id="@+id/navigationView"
		style="@style/Widget.Design.NavigationView"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:fitsSystemWindows="true"
		app:headerLayout="@layout/drawer_header"
		app:menu="@menu/navigation_menu" />
</android.support.v4.widget.DrawerLayout>