<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/searchMenuItem"
		android:icon="@drawable/ic_search"
		android:title="@string/search"
		app:actionViewClass="android.support.v7.widget.SearchView"
		app:showAsAction="always|collapseActionView" />
	<item
		android:id="@+id/compareFilterMenuItem"
		android:title="@string/filter"
		app:showAsAction="always" />
</menu>