<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal"
	android:weightSum="2">

	<FrameLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1">

		<TextView
			android:id="@+id/startEmptyText"
			style="@style/TextAppearance.AppCompat.Subhead"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="@dimen/detail_inner_horizontal_margin"
			android:gravity="center"
			android:text="@string/no_items_available"
			/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/itemsListStart"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:listitem="@layout/merchant_category_list_item_start" />
	</FrameLayout>

	<FrameLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1">

		<TextView
			android:id="@+id/endEmptyText"
			style="@style/TextAppearance.AppCompat.Subhead"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="@dimen/detail_inner_horizontal_margin"
			android:gravity="center"
			android:text="@string/no_items_available"
			/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/itemListEnd"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:listitem="@layout/merchant_category_list_item_start" />
	</FrameLayout>
</LinearLayout>

