...
		android:scaleType="fitXY"
		tools:layout_width="@dimen/compare_list_item_height"
		tools:src="@color/primaryColor"
		android:contentDescription="@string/product_image" />

	<RelativeLayout
		android:id="@+id/itemContainer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="?android:attr/selectableItemBackground"
		android:clickable="true"
		android:focusable="true"
		android:paddingStart="@dimen/compare_list_text_padding"
		tools:ignore="RtlSymmetry">

		<TextView
			android:id="@+id/name"
			style="@style/TextAppearance.AppCompat.Body1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/compare_list_item_height"
			android:ellipsize="end"
			android:maxLines="2"
...
