<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/Base.Theme.AppCompat.Dialog"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

	<android.support.v7.widget.AppCompatTextView
		style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/filter" />

	<android.support.v7.widget.RecyclerView
		android:id="@+id/categoriesFilterList"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		app:layoutManager="android.support.v7.widget.LinearLayoutManager"
		tools:listitem="@layout/category_filter_list_item" />

</LinearLayout>