...
			android:layout_centerVertical="true"
			android:layout_toEndOf="@id/delete_iconStart"
			android:text="@string/remove" />
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/view_foreground"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@android:color/white"
		tools:visibility="visible">

		<android.support.v7.widget.AppCompatImageView
...
			android:contentDescription="@string/product_image"
			android:scaleType="fitXY"
			tools:layout_width="@dimen/shopping_list_item_height"
			tools:src="@drawable/image_placeholder" />

		<RelativeLayout
			android:id="@+id/itemContainer"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:focusable="true"
			android:paddingStart="@dimen/shopping_list_text_padding"
...
