...
	<string name="salt">Salt</string>
	<string name="shopping_list_menu_item">Shopping list</string>
	<string name="compare_menu_item">Compare</string>
	<string name="product_image">Product image</string>
	<string name="signed_in">Signed in!</string>
	<string name="sign_in_canceled">Sign in canceled</string>
	<string name="add_to_list_action">Add to shopping list action</string>
	<string name="remove_from_list_action">Remove from shopping list action</string>
	<string name="kcal"> kcal</string>
	<string name="gram"> g</string>
	<string name="filter">Filter</string>
	<string name="detailImageTransition">detailImageTransition</string>
	<string name="loading_data">Loading data.</string>
...
